--- a/2/index.html
+++ b/2/index.html
@@ -20,7 +20,7 @@
     
                 
                 <nav class="nav" id="nav">
-                    <a class="nav__link" href="test.html">О комплексе</a>
+                    <a class="nav__link" href="index.html">О комплексе</a>
                     <a class="nav__link" href="#cat">Каталог квартир</a>
                     <a class="nav__link" href="#footer">Контакты</a>
                     <a class="nav__link" href="tel:+7(908)-317-79-63" target="_blank">
