--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </div>  
 </div><!-- /.intro -->
-<section style="background-color:#284B63;" class="section" id="#comp">
+<section style="background-color:#284B63;" class="section" id="comp">
 <div class="container">
 
         <div class="section__header">
@@ -107,7 +107,7 @@
   </section>
   <!-- ОТЗЫВЫ -->
    <!-- О НАС -->
-   <section class="section_footer" id="#footer">
+   <section class="section_footer" id="footer">
     <div class="container">
       <div class="section__headerr">
         <h2 style="color: #fff;" class="section__title">Получить консультацию</h2>
