--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 
                 <nav class="nav" id="nav">
                     <a class="nav__link" href="#comp">О комплексе</a>
-                    <a class="nav__link" href="2/catalog.html">Каталог квартир</a>
+                    <a class="nav__link" href="https://murka91.github.io/site2/">Каталог квартир</a>
                     <a class="nav__link" href="#footer">Контакты</a>
                     <a class="nav__link" href="tel:+7(908)-317-79-63" target="_blank">
                         <i class="fa fa-phone-square" aria-hidden="true"></i>+7-(900)787-23-21</a>
